// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reset Password Update should call resetPasswordUpdate props for valid form submission 1`] = `
<div
  className="container py-5 form-gap form-margin"
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <div
        className="row"
      >
        <div
          className="col-md-6 mx-auto"
        >
          <div
            className="card rounded-0"
          >
            <div
              className="card-header"
            >
              <h4
                className="modal-title"
              >
                Enter Password
              </h4>
            </div>
            <div
              className="card-body"
            >
              <form
                autoComplete="off"
                className="form mt-2"
                id="formLogin"
                method="post"
                onSubmit={[Function]}
              >
                <div
                  className="form-group password-input"
                >
                  <TextField
                    className="form-control form-input"
                    field="password"
                    onChange={[Function]}
                    placeholder="enter your password"
                    type="password"
                    value="password"
                  />
                </div>
                <div
                  className="form-group password-input"
                >
                  <TextField
                    className="form-control form-input"
                    field="password_confirmation"
                    onChange={[Function]}
                    placeholder="confirm your password"
                    type="password"
                    value="password"
                  />
                </div>
                <button
                  className="btn btn-block btn-update login-btn"
                  id="btnLogin"
                  type="submit"
                >
                  Reset Password
                </button>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Reset Password Update should call the dispatch mapped to the props 1`] = `
<ResetPasswordUpdate
  location={
    Object {
      "search": "?emailToken=faketoken",
    }
  }
  resetPasswordUpdate={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
/>
`;

exports[`Reset Password Update should correctly render ResetPasswordUpdatePage  1`] = `
<div
  className="container py-5 form-gap form-margin"
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <div
        className="row"
      >
        <div
          className="col-md-6 mx-auto"
        >
          <div
            className="card rounded-0"
          >
            <div
              className="card-header"
            >
              <h4
                className="modal-title"
              >
                Enter Password
              </h4>
            </div>
            <div
              className="card-body"
            >
              <form
                autoComplete="off"
                className="form mt-2"
                id="formLogin"
                method="post"
                onSubmit={[Function]}
              >
                <div
                  className="form-group password-input"
                >
                  <TextField
                    className="form-control form-input"
                    field="password"
                    onChange={[Function]}
                    placeholder="enter your password"
                    type="password"
                    value=""
                  />
                </div>
                <div
                  className="form-group password-input"
                >
                  <TextField
                    className="form-control form-input"
                    field="password_confirmation"
                    onChange={[Function]}
                    placeholder="confirm your password"
                    type="password"
                    value=""
                  />
                </div>
                <button
                  className="btn btn-block btn-update login-btn"
                  id="btnLogin"
                  type="submit"
                >
                  Reset Password
                </button>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Reset Password Update should return error for invalid form submission 1`] = `
<div
  className="container py-5 form-gap form-margin"
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <div
        className="row"
      >
        <div
          className="col-md-6 mx-auto"
        >
          <div
            className="card rounded-0"
          >
            <div
              className="card-header"
            >
              <h4
                className="modal-title"
              >
                Enter Password
              </h4>
            </div>
            <div
              className="card-body"
            >
              <form
                autoComplete="off"
                className="form mt-2"
                id="formLogin"
                method="post"
                onSubmit={[Function]}
              >
                <div
                  className="form-group password-input"
                >
                  <TextField
                    className="form-control form-input"
                    error={
                      Array [
                        "password field is required.",
                      ]
                    }
                    field="password"
                    onChange={[Function]}
                    placeholder="enter your password"
                    type="password"
                    value=""
                  />
                </div>
                <div
                  className="form-group password-input"
                >
                  <TextField
                    className="form-control form-input"
                    error={
                      Array [
                        "The password confirmation field is required.",
                      ]
                    }
                    field="password_confirmation"
                    onChange={[Function]}
                    placeholder="confirm your password"
                    type="password"
                    value=""
                  />
                </div>
                <button
                  className="btn btn-block btn-update login-btn"
                  id="btnLogin"
                  type="submit"
                >
                  Reset Password
                </button>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
